package src.main.java.br.edu.ifpb.skyfall;
public interface Assinante {
    public void receberNotificacao(String notificacao);
}
