package src.main.java.br.edu.ifpb.skyfall.Strategy;

public interface NotificadorStrategy {
    public void notificar(String mensagem);
}
